--- a/todobackend-springboot/src/main/resources/application.properties
+++ b/todobackend-springboot/src/main/resources/application.properties
@@ -11,7 +11,10 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.application.name=todobackend
-spring.sleuth.otel.config.trace-id-ratio-based=1.0
-spring.sleuth.otel.exporter.otlp.endpoint=http://${COLLECTOR_HOST:collector}:4317
+//spring.sleuth.otel.config.trace-id-ratio-based=1.0
+//spring.sleuth.otel.exporter.otlp.endpoint=http://${COLLECTOR_HOST:collector}:4317
+
+otel.exporter.otlp.endpoint=http://${COLLECTOR_HOST:localhost}:4317
+otel.resource.attributes.service.name=todobackend
 
 
