python and docker stuff

--- a/todobackend-springboot/src/main/resources/application.properties
+++ b/todobackend-springboot/src/main/resources/application.properties
@@ -10,11 +10,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.application.name=todobackend
+spring.application.name=springboot-backend // will be picked by otel
 //spring.sleuth.otel.config.trace-id-ratio-based=1.0
 //spring.sleuth.otel.exporter.otlp.endpoint=http://${COLLECTOR_HOST:collector}:4317
 
 otel.exporter.otlp.endpoint=http://${COLLECTOR_HOST:localhost}:4317
-otel.resource.attributes.service.name=todobackend
-
-
+otel.resource.attributes.service.name=spring-backend // will not be picked by otel :-)
