--- a/simple-flask/Dockerfile
+++ b/simple-flask/Dockerfile
@@ -1,11 +1,8 @@
 # Use an official Python runtime as a parent image
-FROM python:3-slim
+FROM python:3
 
 # Set the working directory to /app
 WORKDIR /app
-
-# Copy the current directory contents into the container at /app
-COPY . /app
 
 # Install any needed packages specified in requirements.txt
 RUN pip install flask
@@ -16,6 +13,9 @@ RUN pip install flask
 
 # Make port 5000 available to the world outside this container
 EXPOSE 5000
+
+# Copy the current directory contents into the container at /app
+COPY . /app
 
 # Define environment variable
 # ENV OTEL_LOGS_EXPORTER="otlp"
