--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
       - POSTGRES_DB=mydb
 
   todobackend-springboot:
-    image: maeddes/todobackend:otel
+    image: maeddes/todobackend:v2402
     ports:
       - "8080:8080"
     environment:
