--- a/todobackend-springboot/Dockerfile
+++ b/todobackend-springboot/Dockerfile
@@ -1,4 +1,4 @@
-FROM eclipse-temurin:17
+FROM eclipse-temurin:21-jdk-alpine
 RUN mkdir -p /opt/todobackend
 WORKDIR /opt/todobackend
 ADD https://github.com/open-telemetry/opentelemetry-java-instrumentation/releases/latest/download/opentelemetry-javaagent.jar .
