--- a/todobackend-springboot/Dockerfile-multistage
+++ b/todobackend-springboot/Dockerfile-multistage
@@ -1,4 +1,4 @@
-FROM maven:3-eclipse-temurin-21 as build
+FROM docker.io/maven:3-eclipse-temurin-21 as build
 WORKDIR /workspace/app
 
 COPY pom.xml .
@@ -7,7 +7,7 @@ COPY src src
 RUN --mount=type=cache,target=/root/.m2 mvn install -DskipTests
 RUN mkdir -p target/dependency && (cd target/dependency; jar -xf ../*.jar)
 
-FROM eclipse-temurin:21-jdk-alpine
+FROM docker.io/eclipse-temurin:21-jdk-alpine
 RUN addgroup -S demo && adduser -S demo -G demo
 USER demo
 VOLUME /tmp
