--- a/todoui-thymeleaf/Dockerfile-multistage
+++ b/todoui-thymeleaf/Dockerfile-multistage
@@ -4,7 +4,7 @@ WORKDIR /workspace/app
 COPY pom.xml .
 COPY src src
 
-# RUN --mount=type=cache,target=/root/.m2 mvn install -DskipTests
+RUN --mount=type=cache,target=/root/.m2 mvn install -DskipTests
 RUN mvn install -DskipTests
 RUN mkdir -p target/dependency && (cd target/dependency; jar -xf ../*.jar)
 
