--- a/simple-flask/Dockerfile-old
+++ b/simple-flask/Dockerfile-old
@@ -5,14 +5,16 @@ FROM python:3
 WORKDIR /app
 
 # Install any needed packages specified in requirements.txt
-RUN pip install flask
+COPY ./requirements.txt /app/requirements.txt
+# Install any needed packages specified in requirements.txt
+RUN pip install -r requirements.txt
 #RUN pip install opentelemetry-distro
 #RUN pip install opentelemetry-exporter-otlp
 
 #RUN opentelemetry-bootstrap --action=install
 
 # Make port 5000 available to the world outside this container
-EXPOSE 5000
+EXPOSE 5002
 
 # Copy the current directory contents into the container at /app
 COPY . /app
@@ -25,4 +27,4 @@ COPY . /app
 
 # Run app.py when the container launches
 # CMD ["python", "app.py"]
-CMD ["flask", "run", "-p", "5000"]
+CMD ["flask", "run", "-p", "5002"]
