--- a/todobackend-springboot/Dockerfile-multistage
+++ b/todobackend-springboot/Dockerfile-multistage
@@ -4,16 +4,22 @@ WORKDIR /workspace/app
 COPY pom.xml .
 COPY src src
 
-# RUN --mount=type=cache,target=/root/.m2 mvn install -DskipTests
-RUN mvn install -DskipTests
+RUN --mount=type=cache,target=/root/.m2 mvn install -DskipTests
+# RUN mvn install -DskipTests
 RUN mkdir -p target/dependency && (cd target/dependency; jar -xf ../*.jar)
 
 FROM docker.io/eclipse-temurin:21-jdk-alpine
-RUN addgroup -S demo && adduser -S demo -G demo
-USER demo
+RUN mkdir -p /opt/todobackend
+WORKDIR /opt/todobackend
+#RUN addgroup -S demo && adduser -S demo -G demo
+#USER demo
 VOLUME /tmp
 ARG DEPENDENCY=/workspace/app/target/dependency
-COPY --from=build ${DEPENDENCY}/BOOT-INF/lib /app/lib
-COPY --from=build ${DEPENDENCY}/META-INF /app/META-INF
-COPY --from=build ${DEPENDENCY}/BOOT-INF/classes /app
-ENTRYPOINT ["java","-cp","app:app/lib/*","io.novatec.todobackend.TodobackendApplication"]
+COPY --from=build ${DEPENDENCY}/BOOT-INF/lib /opt/todobackend/app/lib
+COPY --from=build ${DEPENDENCY}/META-INF /opt/todobackend/app/META-INF
+COPY --from=build ${DEPENDENCY}/BOOT-INF/classes /opt/todobackend/app
+
+#ADD --chmod=555 https://github.com/open-telemetry/opentelemetry-java-instrumentation/releases/latest/download/opentelemetry-javaagent.jar /opt/todobackend
+ADD  https://github.com/open-telemetry/opentelemetry-java-instrumentation/releases/latest/download/opentelemetry-javaagent.jar /opt/todobackend
+
+ENTRYPOINT ["java", "-cp", "/opt/todobackend/app:/opt/todobackend/app/lib/*",  "-javaagent:/opt/todobackend/opentelemetry-javaagent.jar","io.novatec.todobackend.TodobackendApplication"]
