--- a/todobackend-springboot/src/main/resources/application.properties
+++ b/todobackend-springboot/src/main/resources/application.properties
@@ -10,7 +10,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.application.name=springboot-backend // will be picked by otel
+spring.application.name=springboot-backend 
+// will be picked by otel
 //spring.sleuth.otel.config.trace-id-ratio-based=1.0
 //spring.sleuth.otel.exporter.otlp.endpoint=http://${COLLECTOR_HOST:collector}:4317
 
