--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,8 +2,10 @@ version: '3.1'
 
 services:
 
+### APPLICATION PART
+
   postgresdb:
-    image: postgres
+    image: ${POSTGRES_IMAGE}
 
     ports:
       - 5432:5432
@@ -22,10 +24,12 @@ services:
     environment:
       - SPRING_PROFILES_ACTIVE=prod
 #      - OTEL_EXPORTER_OTLP_ENDPOINT=http://jaeger:4318 # http endpoint
-      - OTEL_EXPORTER_OTLP_ENDPOINT=http://jaeger:4317
+      - OTEL_EXPORTER_OTLP_ENDPOINT=${OTEL_EXPORTER_OTLP_ENDPOINT}
+      - OTEL_EXPORTER_OTLP_METRICS_ENDPOINT=${OTEL_EXPORTER_OTLP_ENDPOINT}
       - OTEL_EXPORTER_OTLP_TRACES_PROTOCOL=grpc
+      - OTEL_EXPORTER_OTLP_METRICS_PROTOCOL=grpc
       - OTEL_RESOURCE_ATTRIBUTES=service.name=todobackend-springboot
-      - OTEL_METRICS_EXPORTER=none
+      - OTEL_METRICS_EXPORTER=otlp,logging-otlp
       - OTEL_LOGS_EXPORTER=none
     depends_on:
       - postgresdb
@@ -39,10 +43,11 @@ services:
       - "8090:8090"
     environment:
       - BACKEND_URL=http://todobackend-springboot:8080/
-      - OTEL_EXPORTER_OTLP_ENDPOINT=http://jaeger:4317
+      - OTEL_EXPORTER_OTLP_ENDPOINT=${OTEL_EXPORTER_OTLP_ENDPOINT}
       - OTEL_EXPORTER_OTLP_TRACES_PROTOCOL=grpc
+      - OTEL_EXPORTER_OTLP_METRICS_PROTOCOL=grpc
       - OTEL_RESOURCE_ATTRIBUTES=service.name=todoui-thymeleaf
-      - OTEL_METRICS_EXPORTER=none
+      - OTEL_METRICS_EXPORTER=otlp,logging-otlp
       - OTEL_LOGS_EXPORTER=none
 
   todoui-flask:
@@ -53,17 +58,68 @@ services:
       - "5000:5000"
     environment:
       - BACKEND_URL=http://todobackend-springboot:8080/todos/
-      - OTEL_EXPORTER_OTLP_ENDPOINT=http://jaeger:4317
+      - OTEL_EXPORTER_OTLP_ENDPOINT=${OTEL_EXPORTER_OTLP_ENDPOINT}
       - OTEL_RESOURCE_ATTRIBUTES=service.name=todoui-flask
-      - OTEL_METRICS_EXPORTER=none
+      - OTEL_METRICS_EXPORTER=otlp
+
+### OTEL PART
+
+  # jaegercol:
+  #   image: jaegertracing/all-in-one:latest
+  #   environment:
+  #     - COLLECTOR_OTLP_ENABLED=true
+  #   ports:
+  #     - "16686:16686"
+  #     - "4317:4317"
 
   jaeger:
-    image: jaegertracing/all-in-one:latest
-    environment:
-      - COLLECTOR_OTLP_ENABLED=true
+    image: ${JAEGERTRACING_IMAGE}
+    command:
+      - "--memory.max-traces=5000"
+      - "--prometheus.server-url=http://prometheus:9090"
+      - "--prometheus.query.normalize-calls=true"
+      - "--prometheus.query.normalize-duration=true"
+ #      - "--query.base-path=/jaeger/ui"
     ports:
       - "16686:16686"
-      - "14250"
-      - "14269:14269"
-      - "4317:4317"
+    deploy:
+      resources:
+        limits:
+          memory: 400M
+    restart: unless-stopped
+    environment:
+      - METRICS_STORAGE_TYPE=prometheus
 
+  otelcol:
+    image: ${COLLECTOR_CONTRIB_IMAGE}
+    command: ["--config=/etc/otel-collector-config.yaml", ""]
+    volumes:
+      - ./collector/otel-collector-config.yaml:/etc/otel-collector-config.yaml
+    ports:
+      - "4317:4317"   # OTLP gRPC receiver
+      - "4318:4318"
+    depends_on:
+      - jaeger
+
+  # Prometheus
+  prometheus:
+    image: ${PROMETHEUS_IMAGE}
+    command:
+      - --web.console.templates=/etc/prometheus/consoles
+      - --web.console.libraries=/etc/prometheus/console_libraries
+      - --storage.tsdb.retention.time=1h
+      - --config.file=/etc/prometheus/prometheus-config.yaml
+      - --storage.tsdb.path=/prometheus
+      - --web.enable-lifecycle
+      - --web.route-prefix=/
+      - --enable-feature=exemplar-storage
+      - --enable-feature=otlp-write-receiver
+    volumes:
+      - ./prometheus/prometheus-config.yaml:/etc/prometheus/prometheus-config.yaml
+    deploy:
+      resources:
+        limits:
+          memory: 300M
+    restart: unless-stopped
+    ports:
+      - "${PROMETHEUS_SERVICE_PORT}:${PROMETHEUS_SERVICE_PORT}"
