--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,8 @@ services:
 
   postgresdb:
     image: ${POSTGRES_IMAGE}
-
+    networks:
+      - todonet
     ports:
       - 5432:5432
     environment:
@@ -16,11 +17,14 @@ services:
 
   todobackend-springboot:
     image: todobackend:v2402
+    networks:
+      - todonet
     build:
       context: ./todobackend-springboot
       dockerfile: Dockerfile
     ports:
       - "8080:8080"
+    restart: unless-stopped
     environment:
       - SPRING_PROFILES_ACTIVE=prod
 #      - OTEL_EXPORTER_OTLP_ENDPOINT=http://jaeger:4318 # http endpoint
@@ -39,6 +43,8 @@ services:
     build:
       context: ./todoui-thymeleaf
       dockerfile: Dockerfile #-multistage
+    networks:
+      - todonet
     ports:
       - "8090:8090"
     environment:
@@ -55,13 +61,22 @@ services:
     image: todoui-flask:v0.1
     build:
       context: ./todoui-flask
+    networks:
+      - todonet
     ports:
-      - "5000:5000"
+      - "5001:5000"
     environment:
       - BACKEND_URL=http://todobackend-springboot:8080/todos/
       - OTEL_EXPORTER_OTLP_ENDPOINT=${OTEL_EXPORTER_OTLP_ENDPOINT}
       - OTEL_RESOURCE_ATTRIBUTES=service.name=todoui-flask
       - OTEL_METRICS_EXPORTER=otlp
+
+  loadgenerator:
+    image: generator:v0.1
+    networks:
+      - todonet
+    build:
+      context: ./loadgenerator
 
 ### OTEL PART
 
@@ -75,6 +90,8 @@ services:
 
   jaeger:
     image: ${JAEGERTRACING_IMAGE}
+    networks:
+      - todonet
     command:
       - "--memory.max-traces=5000"
       - "--prometheus.server-url=http://prometheus:9090"
@@ -93,6 +110,8 @@ services:
 
   otelcol:
     image: ${COLLECTOR_CONTRIB_IMAGE}
+    networks:
+      - todonet
     command: ["--config=/etc/otel-collector-config.yaml", ""]
     volumes:
       - ./collector/otel-collector-config.yaml:/etc/otel-collector-config.yaml
@@ -105,6 +124,8 @@ services:
   # Prometheus
   prometheus:
     image: ${PROMETHEUS_IMAGE}
+    networks:
+      - todonet
     command:
       - --web.console.templates=/etc/prometheus/consoles
       - --web.console.libraries=/etc/prometheus/console_libraries
@@ -124,3 +145,26 @@ services:
     restart: unless-stopped
     ports:
       - "${PROMETHEUS_SERVICE_PORT}:${PROMETHEUS_SERVICE_PORT}"
+
+
+networks:
+  todonet:
+    
+  # opensearch:
+  #   image: ${OPENSEARCH_IMAGE}
+  #   container_name: opensearch
+  #   deploy:
+  #     resources:
+  #       limits:
+  #         memory: 1G
+  #   restart: unless-stopped
+  #   environment:
+  #     - cluster.name=demo-cluster
+  #     - node.name=demo-node
+  #     - bootstrap.memory_lock=true
+  #     - discovery.type=single-node
+  #     - OPENSEARCH_JAVA_OPTS=-Xms300m -Xmx300m
+  #     - DISABLE_INSTALL_DEMO_CONFIG=true
+  #     - DISABLE_SECURITY_PLUGIN=true
+  #   ports:
+  #     - "9200:9200"
