--- a/.env
+++ b/.env
@@ -7,12 +7,12 @@ OPENSEARCH_IMAGE=opensearchproject/opensearch:latest #2.12.0
 
 #GRAFANA_IMAGE=grafana/grafana:10.4.0
 # must also update version field in /src/grafana/provisioning/datasources/opensearch.yml
-OPENSEARCH_IMAGE=opensearchproject/opensearch:2.12.0
-
-
-
-
 
 PROMETHEUS_SERVICE_PORT=9090
 PROMETHEUS_SERVICE_HOST=prometheus
 PROMETHEUS_ADDR=${PROMETHEUS_SERVICE_HOST}:${PROMETHEUS_SERVICE_PORT}
+
+OTEL_COLLECTOR_HOST=otelcol
+OTEL_COLLECTOR_PORT_GRPC=4317
+OTEL_COLLECTOR_PORT_HTTP=4318
+OTEL_EXPORTER_OTLP_ENDPOINT=http://${OTEL_COLLECTOR_HOST}:${OTEL_COLLECTOR_PORT_GRPC}
